Add Vercel rewrites for SPA routing

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,11 +2,11 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "crons": [],
   "cleanUrls": true,
-  "git": {
-    "deploymentEnabled": {
-      "main": true
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  }
+  ]
 }
